finally do something with this

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<p>hello</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>nivse.me</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Hi, <span>nivse</span> here!</h1>
+        <div class="socials">
+            <a href="https://discord.com/users/1099317550040494123">
+                <img src="./img/discord.svg" alt="">
+            </a>
+            <a href="https://steamcommunity.com/id/nh_xd">
+                <img src="./img/steam.svg" alt="">
+            </a>
+            <a href="https://github.com/nivsee">
+                <img src="./img/github.svg" alt="">
+            </a>
+        </div>
+    </div>
+    <div class="projects">
+        <h2>Projects - soon™</h2>
+    </div>
+</body>
+</html>
