--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="https://discord.com/users/1099317550040494123">
                 <img src="./img/discord.svg" alt="">
             </a>
-            <a href="https://steamcommunity.com/id/nh_xd">
+            <a href="https://steamcommunity.com/id/nukefan">
                 <img src="./img/steam.svg" alt="">
             </a>
             <a href="https://github.com/nivsee">
