new website look

--- a/index.html
+++ b/index.html
@@ -4,22 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nivse.me</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Hi, <span>nivse</span> here!</h1>
-        <div class="socials">
-            <a href="https://discord.com/users/1099317550040494123">
-                <img src="./img/discord.svg" alt="">
-            </a>
-            <a href="https://steamcommunity.com/id/nukefan">
-                <img src="./img/steam.svg" alt="">
-            </a>
-            <a href="https://github.com/nivsee">
-                <img src="./img/github.svg" alt="">
-            </a>
-        </div>
+    <div class="main">
+        <h1>NIVSE</h1>
+    </div>
+    <div class="bar">
+        <a href="#" class="link current">LINKS</a>
+        <a href="#" class="link disabled">PROJECTS</a>
+    </div>
+    <div class="content">
+        <a href="https://steamcommunity.com/profiles/76561198891645000/" class="box">
+            <img src="./assets/steam.svg" alt="">
+            <p>Steam</p>
+        </a>
+        <a href="https://github.com/nivsee" class="box">
+            <img src="./assets/github.svg" alt="">
+            <p>GitHub</p>
+        </a>        
+        <a href="https://www.youtube.com/@nivse" class="box">
+            <img src="./assets/youtube.svg" alt="">
+            <p>YouTube</p>
+        </a>
     </div>
 </body>
 </html>
